long time update
doing some little updates to polish things up a bit to keep things interesting.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
 <meta charset="utf-8">
 <title>Simple CSS Menu Demo</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
+<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300;400;900&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
 
-<div id="menu">
+    <div class="wrapper">
+
+    <header>
+        <h1>Super Website 8</h1>
+    </header>
+        <div id="menu">
 	<ul>
     	<li><a href="">Link</a></li>
         <li><a href="">Link</a></li>
         <li><a href="">Link</a></li>
-    
+        <li><a href="">Link</a></li>
+        <li><a href="">Link</a></li>
     </ul>
 
-</div>
+        </div><!-- menu -->
 
+        <main>
+            <h2>Simple CSS Menu Demo</h2>
+            <p>This is just a simple demo of a CSS menu. One of my first lessons I learned when learning how to code. I decided to update it with a little more code to polish it up a bit.</p>
+
+        </main>
+</div><!-- wrapper -->
 </body>
 </html>
